# kolchozians-hackathon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: analysis.yml
agents/: chesspiece.py  king.py  prompt_checker.py  summary.py
behaviours/: agent_aggressive.txt  agent_balanced.txt  agent_defensive.txt  queen.txt
game_agents/: chessfraction.py  chesspiece.py  king.py  prompt_checker.py
promptchess/: __main__.py  chessboard.py  game_state.py  logic.py  simulation.py  utils.py  visualize.py
promptchess/behaviours/: bishop.txt  king.txt  knight.txt  pawn.txt  rook.txt
promptchess/game_agents/: chessfraction.py  evaluator.py  jester.py  king.py  prompt_agent.py  prompt_checker.py  summary.py
promptchess/ui/: app.py  state.py
prompts/: cunning_tactician.txt  pragmatic_realist.txt  steadfast_guardian.txt  whimsical_maverick.txt  zealous_crusader.txt
