[tool.poetry]
name = "promptchess"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chess = "^1.11.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
pylint = "^3.3.6"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
